// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/convert - defaults to 1 btc in usd 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "1 BTC = $35,807",
}
`;

exports[`/convert 100 asdfasdf - returns an error for invalid coin 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Sorry, I couldn't find asdfasdf. Try using the full name",
}
`;

exports[`/convert 100 doge ark - supports coin to coin 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "100 DOGE = 2.26598 ARK",
}
`;

exports[`/convert 100 eth asdfasdf - returns an error for invalid vs 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Sorry, I couldn't find asdfasdf. Try using the full name",
}
`;

exports[`/convert 400,000.00 doge eur - ignores commas in en locale 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "400,000 DOGE = €3,028.83",
}
`;

exports[`/convert 400,000.00 doge eur - ignores empty locale 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "400,000 DOGE = €3,028.83",
}
`;

exports[`/convert 400,000.00 doge eur - ignores xx locale 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "400,000 DOGE = €3,028.83",
}
`;

exports[`/convert 400.000,00 doge eur - understands de locale 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "400.000 DOGE = 3.028,83 €",
}
`;

exports[`/convert 1000 ethereum aud - supports other currencies 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "1,000 ETH = A$1,602,030",
}
`;

exports[`/convert foo - returns an error for invalid amount 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Amount 'foo' is not a valid number",
}
`;

exports[`/price - defaults to btc in usd 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "parse_mode": "markdown",
  "text": "*Bitcoin (BTC)* in USD
Current price:  \`$35,807\`
h/d/w/m: \`-0.228%\` / \`-1.9%\` / \`-11.1%\` / \`57%\` 
Market cap:  \`$663,977,264,729\`
24h volume:  \`$52,497,360,217\`
_(updated Sun, 17 Jan 2021 19:02:48 GMT)_",
}
`;

exports[`/price ETH GBP - finds coins by symbol 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "parse_mode": "markdown",
  "text": "*Ethereum (ETH)* in GBP
Current price:  \`£906.23\`
h/d/w/m: \`0.166%\` / \`-0.0911%\` / \`-4.18%\` / \`90.9%\` 
Market cap:  \`£103,307,225,676\`
24h volume:  \`£26,528,626,731\`
_(updated Sun, 17 Jan 2021 19:03:27 GMT)_",
}
`;

exports[`/price PEAKDEFI - finds coins by name 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "parse_mode": "markdown",
  "text": "*PEAKDEFI (PEAK)* in USD
Current price:  \`$0.269714\`
h/d/w/m: \`0.705%\` / \`3.52%\` / \`1.46%\` / \`-14.1%\` 
Market cap:  \`$24,860,396\`
24h volume:  \`$183,402\`
_(updated Sun, 17 Jan 2021 19:00:08 GMT)_",
}
`;

exports[`/price algoha - finds coins by symbol partial match 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "parse_mode": "markdown",
  "text": "*0.5X Long Algorand Token (ALGOHALF)* in USD
Current price:  \`$9,857.57\`
h/d/w/m: \`?\` / \`?\` / \`?\` / \`?\` 
Market cap:  \`$0\`
24h volume:  \`$60.03\`
_(updated Sat, 16 Jan 2021 08:09:16 GMT)_",
}
`;

exports[`/price asdfasdf eur - returns an error for invalid coin 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Sorry, I couldn't find asdfasdf. Try using the full name",
}
`;

exports[`/price bitcoin asdasd - returns an error for invalid vs currency 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Sorry, I can't list prices in asdasd. Supported base currencies are: btc, eth, ltc, bch, bnb, eos, xrp, xlm, link, dot, yfi, usd, aed, ars, aud, bdt, bhd, bmd, brl, cad, chf, clp, cny, czk, dkk, eur, gbp, hkd, huf, idr, ils, inr, jpy, krw, kwd, lkr, mmk, mxn, myr, ngn, nok, nzd, php, pkr, pln, rub, sar, sek, sgd, thb, try, twd, uah, vef, vnd, zar, xdr, xag, xau, bits, sats",
}
`;

exports[`/price bitm - finds coins by id partial match 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "parse_mode": "markdown",
  "text": "*BitMoney (BIT)* in USD
Current price:  \`$0.00003653\`
h/d/w/m: \`?\` / \`?\` / \`?\` / \`61%\` 
Market cap:  \`$18,608.9\`
24h volume:  \`$9.46\`
_(updated Sat, 16 Jan 2021 03:28:33 GMT)_",
}
`;

exports[`/price doge bitcoin - finds vs by coin id 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "parse_mode": "markdown",
  "text": "*Dogecoin (DOGE)* in BTC
Current price:  \`BTC 0.0000002563\`
h/d/w/m: \`-0.111%\` / \`2.22%\` / \`1.07%\` / \`56.9%\` 
Market cap:  \`BTC 33,001\`
24h volume:  \`BTC 9,494\`
_(updated Sun, 17 Jan 2021 19:00:15 GMT)_",
}
`;

exports[`/price ethereum eur - supports other currencies 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "parse_mode": "markdown",
  "text": "*Ethereum (ETH)* in EUR
Current price:  \`€1,019.44\`
h/d/w/m: \`0.166%\` / \`-0.0911%\` / \`-2.86%\` / \`94.1%\` 
Market cap:  \`€116,212,697,466\`
24h volume:  \`€29,842,668,336\`
_(updated Sun, 17 Jan 2021 19:03:27 GMT)_",
}
`;

exports[`/price peakd - finds coins by name partial match 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "parse_mode": "markdown",
  "text": "*PEAKDEFI (PEAK)* in USD
Current price:  \`$0.269714\`
h/d/w/m: \`0.705%\` / \`3.52%\` / \`1.46%\` / \`-14.1%\` 
Market cap:  \`$24,860,396\`
24h volume:  \`$183,402\`
_(updated Sun, 17 Jan 2021 19:00:08 GMT)_",
}
`;

exports[`/regret - defaults to 10,000 btc sold at $41 usd 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "If you hadn't sold your 10,000 BTC for $41, you'd be $358,069,959 richer now 🚀! ... fuck!",
}
`;

exports[`/regret 0.5 eth 500 aud - supports other currencies 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "If you hadn't sold your 0.5 ETH for A$500, you'd be A$301.015 richer now 🚀!",
}
`;

exports[`/regret 1 asdfasdf - returns an error for invalid coin 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Sorry, I couldn't find asdfasdf. Try using the full name",
}
`;

exports[`/regret 1 btc 100 asdfasdf - returns an error for invalid vs 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Sorry, I can't get prices in asdfasdf. Supported base currencies are: btc, eth, ltc, bch, bnb, eos, xrp, xlm, link, dot, yfi, usd, aed, ars, aud, bdt, bhd, bmd, brl, cad, chf, clp, cny, czk, dkk, eur, gbp, hkd, huf, idr, ils, inr, jpy, krw, kwd, lkr, mmk, mxn, myr, ngn, nok, nzd, php, pkr, pln, rub, sar, sek, sgd, thb, try, twd, uah, vef, vnd, zar, xdr, xag, xau, bits, sats",
}
`;

exports[`/regret 1 btc foo - returns an error for invalid soldAt 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Sell price 'foo' is not a valid number",
}
`;

exports[`/regret 1000 xrp 1000 - congratulates no ragerts 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Wow, No Ragerts 💥! Your 1,000 XRP would be worth $722.786 less today than the $1,000 you sold it for!",
}
`;

exports[`/regret foo - returns an error for invalid amount 1`] = `
Object {
  "chat_id": 2,
  "method": "sendMessage",
  "text": "Amount 'foo' is not a valid number",
}
`;

exports[`webhook shows a welcome message with /start 1`] = `"Hi there! To get started try typing /price"`;
